# missouri-transitional-benefits

./: .gitignore  Makefile  pyproject.toml  vercel.json
.github/workflows/: pr.yaml
app/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
app/src/: App.tsx  theme.ts  types.d.ts
app/src/components/: ConservationLaw.tsx  CtResults.tsx  MtrComparison.tsx  TheMath.tsx  TheProblem.tsx  TheReform.tsx  TwoPeriodModel.tsx
app/src/data/: ct_results.json  snap_results.json
benefits_cliffs/: __init__.py  designs.py  measures.py  microsim.py  two_period.py
scripts/: compute_ct_results.py  compute_snap_results.py
tests/: test_designs.py  test_measures.py  test_microsim.py  test_two_period.py
