[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "benefits-cliffs"
version = "0.1.0"
description = "Benefits cliffs analysis for US policy"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy",
]

[project.optional-dependencies]
microsim = [
    "policyengine-us",
]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["benefits_cliffs*"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
markers = [
    "microsim: marks tests requiring policyengine-us (deselect with '-m \"not microsim\"')",
]
testpaths = ["tests"]
